--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "sodyxiezhen/nonce",
   "description": "create nonce string by sody",
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=5.4.0",
+    "phpunit/phpunit": "~6.0"
   },
   "autoload": {
     "psr-4": {
